- Update location handling - add initial stripe webhook amd checkout_session api - update money/[donationType] Template - add generic config - some other stuff...

--- a/src/locales/de/common.json
+++ b/src/locales/de/common.json
@@ -1,8 +1,10 @@
 {
+  "or": "oder",
   "button": {
     "label": {
       "donateNow": "Spenden Sie jetzt",
-      "learnMore": "mehr erfahren"
+      "learnMore": "mehr erfahren",
+      "donate": "€ spenden"
     }
   }
 }
