- Add SSR to money-donation with location pages - Fix validation of donation min/max - Add some translations

--- a/src/locales/de/donation.json
+++ b/src/locales/de/donation.json
@@ -2,6 +2,9 @@
   "money": {
     "title": "Großes bewirken...",
     "subtitle": "mit einer kleinen Spende.",
-    "description": "Dort wo jeder Euro zählt, ist jede Spende willkommen..."
+    "description": "Dort wo jeder Euro zählt, ist jede Spende willkommen...",
+    "form": {
+      "loading": "...wir bereiten die Spende vor und leiten Sie in wenigen Sekunden zu unserem Bezahlanbieter (Stripe) weiter."
+    }
   }
 }
