- Add new Fonts - Add initial card component - Start styling MoneyDonation-Page

--- a/src/locales/de/common.json
+++ b/src/locales/de/common.json
@@ -1,6 +1,7 @@
 {
   "or": "oder",
   "donationAmount": "Spendensumme",
+  "viaQrCode":"via QR-Code",
   "button": {
     "label": {
       "donateNow": "Spenden Sie jetzt",
